charon/tests/ui/unsupported/advanced-const-generics.out
error: Constant parameters of non-literal type are not supported
  --> tests/ui/unsupported/advanced-const-generics.rs:14:8
   |
14 | fn foo<const X: Foo>() -> Foo {
   |        ^^^^^^^^^^^^

error: Item `test_crate::foo` caused errors; ignoring.
  --> tests/ui/unsupported/advanced-const-generics.rs:14:1
   |
14 | fn foo<const X: Foo>() -> Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: assertion failure: "global_ref.generics.is_empty()"
  --> tests/ui/unsupported/advanced-const-generics.rs:22:26
   |
22 |     let _: [(); N + 1] = [(); N + 1];
   |                          ^^^^^^^^^^^

error: assertion failure: "global_ref.generics.is_empty()"
  --> tests/ui/unsupported/advanced-const-generics.rs:22:26
   |
22 |     let _: [(); N + 1] = [(); N + 1];
   |                          ^^^^^^^^^^^

ERROR Charon failed to translate this code (4 errors)
